add_subdirectory(util)
add_subdirectory(core)
add_subdirectory(net)
add_subdirectory(control)
add_subdirectory(rhr)
add_subdirectory(userinterface)
add_subdirectory(vtk)
add_subdirectory(xdmf)
add_subdirectory(module)
add_subdirectory(renderer)
add_subdirectory(manager)
add_subdirectory(insitu)
if(NOT VISTLE_MODULES_SHARED)
    add_subdirectory(module_descriptions)
endif()
