add_subdirectory(util)
add_subdirectory(config)
add_subdirectory(core)
add_subdirectory(alg)
add_subdirectory(net)
add_subdirectory(python)
add_subdirectory(control)
add_subdirectory(rhr)
add_subdirectory(userinterface)
add_subdirectory(vtk)
add_subdirectory(vtkm)
add_subdirectory(xdmf)
add_subdirectory(netcdf)
add_subdirectory(module)
add_subdirectory(renderer)
add_subdirectory(manager)
add_subdirectory(insitu)
add_subdirectory(module_descriptions)
