# modules mainly suitable for testing and developing
set(VISTLE_MODULE_CATEGORY "Develop")

add_subdirectory(CreateCelltree)
add_subdirectory(CreateVertexOwnerList)
add_subdirectory(CutGeometryOld)
add_subdirectory(Dropbear)
add_subdirectory(FilterNode)
add_subdirectory(Gendat)
add_subdirectory(GenIsoDat)
add_subdirectory(GridElementStatistics)
add_subdirectory(IsoSurfaceVtkm)
add_subdirectory(ManipulateGhosts)
add_subdirectory(MiniSim)
add_subdirectory(MpiInfo)
add_subdirectory(ObjectStatistics)
add_subdirectory(PrintAttributes)
add_subdirectory(Replicate)
add_subdirectory(ShowCelltree)
add_subdirectory(ShowGridIndex)
add_subdirectory(TestCellSearch)
add_subdirectory(TestDynamicPorts)
add_subdirectory(TestInterpolation)
add_subdirectory(ToPolyhedra)
add_subdirectory(TransformGrid)
add_subdirectory(Validate)
