# filters operate on abstract (non-geometric) data and produce abstract data as output
set(VISTLE_MODULE_CATEGORY "Filter")

add_subdirectory(CellToVert)
add_subdirectory(Displace)
add_subdirectory(MapDrape)
add_subdirectory(Sample)
add_subdirectory(ScalarToVec)
add_subdirectory(SplitDimensions)
add_subdirectory(ToUnstructured)
add_subdirectory(VecToScalar)
