vistle_category("Filter" "manipulate abstract data")

add_subdirectory(CellToVert)
add_subdirectory(CellToVertVtkm)
add_subdirectory(Displace)
add_subdirectory(FilterCells)
add_subdirectory(MapDrape)
add_subdirectory(Sample)
add_subdirectory(ScalarToVec)
add_subdirectory(SelectCells)
add_subdirectory(SelectVertices)
add_subdirectory(SplitDimensions)
add_subdirectory(Threshold)
add_subdirectory(ThresholdVtkm)
add_subdirectory(ToUnstructured)
add_subdirectory(VecToScalar)
add_subdirectory(VecToScalarVtkm)
add_subdirectory(VertToCellVtkm)
