vistle_category("General" "process data at any stage in the pipeline")

add_subdirectory(AddAttribute)
add_subdirectory(Assemble)
add_subdirectory(AttachGrid)
add_subdirectory(AttachNormals)
add_subdirectory(AttachShader)
add_subdirectory(Cache)
add_subdirectory(Calc)
add_subdirectory(ClipVtkm)
add_subdirectory(ColorAttribute)
add_subdirectory(Distribute)
add_subdirectory(EnableTransparency)
add_subdirectory(ExtractGrid)
add_subdirectory(GhostCellGenerator)
add_subdirectory(MetaData)
add_subdirectory(SortBlocks)
add_subdirectory(Transform)
add_subdirectory(Variant)
add_subdirectory(WeldVertices)
#add_subdirectory(WriteHDF5)
#add_subdirectory(WriteVistle)
