# geometry modules operate on geometric data and produce geometric data
set(VISTLE_MODULE_CATEGORY "Geometry")

add_subdirectory(ApplyTransform)
add_subdirectory(Chainmail)
add_subdirectory(DelaunayTriangulator)
add_subdirectory(FlattenTriangles)
add_subdirectory(SplitPolyhedra)
add_subdirectory(Thicken)
add_subdirectory(ToPoints)
add_subdirectory(ToTriangles)
