vistle_category("Geometry" "operate on geometric shapes and produce geometric data")

add_subdirectory(ApplyTransform)
add_subdirectory(Chainmail)
add_subdirectory(CreateCuboids)
add_subdirectory(CutGeometry)
add_subdirectory(DelaunayTriangulator)
add_subdirectory(FlattenTriangles)
add_subdirectory(SplitPolyhedra)
add_subdirectory(Thicken)
add_subdirectory(ToPoints)
add_subdirectory(ToTriangles)
add_subdirectory(SpheresOverlap)
