# mappers operate on abstract data and produce geometric data suitable for rendering as output
set(VISTLE_MODULE_CATEGORY "Map")

add_subdirectory(BoundingBox)
add_subdirectory(Color)
add_subdirectory(ColorMetapostPart)
add_subdirectory(ColorRandom)
add_subdirectory(CuttingSurface)
add_subdirectory(DomainSurface)
add_subdirectory(IndexManifolds)
add_subdirectory(IsoHeightSurface)
add_subdirectory(IsoSurface)
add_subdirectory(ShowGrid)
add_subdirectory(Tracer)
add_subdirectory(VectorField)
