vistle_category("Map" "map abstract data to geometric shapes suitable for rendering")

add_subdirectory(BoundingBox)
add_subdirectory(Color)
add_subdirectory(ColorMetapostPart)
add_subdirectory(ColorRandom)
add_subdirectory(CuttingSurface)
add_subdirectory(CuttingSurfaceVtkm)
add_subdirectory(DomainSurface)
add_subdirectory(IndexManifolds)
add_subdirectory(IsoHeightSurface)
add_subdirectory(IsoSurface)
add_subdirectory(ShowGrid)
add_subdirectory(Tracer)
add_subdirectory(VectorField)
