vistle_category("Map" "transform abstract data into geometry")

add_subdirectory(BoundingBox)
add_subdirectory(Color)
add_subdirectory(ColorMetapostPart)
add_subdirectory(ColorRandom)
add_subdirectory(CuttingSurface)
add_subdirectory(CuttingSurfaceVtkm)
add_subdirectory(DomainSurface)
add_subdirectory(DomainSurfaceVtkm)
add_subdirectory(IndexManifolds)
add_subdirectory(IsoHeightSurface)
add_subdirectory(IsoSurface)
add_subdirectory(IsoSurfaceVtkm)
add_subdirectory(ShowGrid)
add_subdirectory(Tracer)
add_subdirectory(VectorField)
add_subdirectory(VectorFieldVtkm)
