# modules for reading data from files
set(VISTLE_MODULE_CATEGORY "Read")

add_subdirectory(LoadCover)
add_subdirectory(ReadCfx)
add_subdirectory(ReadCovise)
add_subdirectory(ReadDyna3D)
add_subdirectory(ReadFoam)
add_subdirectory(ReadNek5000)
#add_subdirectory(ReadHDF5)
add_subdirectory(ReadIagNetcdf)
add_subdirectory(ReadIagTecplot)
add_subdirectory(ReadItlrFs3d)
add_subdirectory(ReadModel)
add_subdirectory(ReadMpas)
#add_subdirectory(ReadVistle)
add_subdirectory(ReadVtk)
add_subdirectory(ReadWrfChem)
add_subdirectory(ReadTsunami)
add_subdirectory(ReadSeisSol)
add_subdirectory(Transversalflussmaschine)
