vistle_category("Read" "read data from files")

#add_subdirectory(ReadHDF5)
#add_subdirectory(ReadVistle)
add_subdirectory(LoadCover)
add_subdirectory(ReadCfx)
add_subdirectory(ReadCovise)
add_subdirectory(ReadCsv)
add_subdirectory(ReadDuisburg)
add_subdirectory(ReadDyna3D)
add_subdirectory(ReadEnsight)
add_subdirectory(ReadFoam)
add_subdirectory(ReadIagNetcdf)
add_subdirectory(ReadIagTecplot)
add_subdirectory(ReadIewMatlabCsvExports)
add_subdirectory(ReadItlrFs3d)
add_subdirectory(ReadModel)
add_subdirectory(ReadMpas)
add_subdirectory(ReadNek5000)
add_subdirectory(ReadSeisSol)
add_subdirectory(ReadSoundPlan)
add_subdirectory(ReadTsunami)
add_subdirectory(ReadVtk)
add_subdirectory(ReadWrfChem)
